# onvif_wrapper

./: CMakeLists.txt
include/: ErrorWrap.hpp  Onvif.hpp  OnvifClientDevice.h  OnvifClientImaging.h  OnvifClientMedia.h  OnvifClientPtz.h  OnvifPod.hpp  Utility.hpp
onvif_gsoap/: CMakeLists.txt  compile.sh
onvif_gsoap/include/: PTZBinding.nsmap  soapCredentialBindingProxy.h  soapDeviceBindingProxy.h  soapImagingBindingProxy.h  soapMedia2BindingProxy.h  soapPTZBindingProxy.h
onvif_gsoap/onvifgen/: PTZBinding.nsmap  soapDisplayBindingProxy.cpp  soapDisplayBindingProxy.h  soapImagingBindingProxy.cpp  soapMediaBindingProxy.h  soapStub.h
onvif_gsoap/source/: soapCredentialBindingProxy.cpp  soapDeviceBindingProxy.cpp  soapMedia2BindingProxy.cpp  soapMediaBindingProxy.cpp  soapPTZBindingProxy.cpp
source/: Onvif.cpp  OnvifClientDevice.cpp  OnvifClientImaging.cpp  OnvifClientMedia.cpp  OnvifClientPtz.cpp
source/impl/: OnvifClientDeviceImpl.h  OnvifClientImagingImpl.h  OnvifClientMediaImpl.h  OnvifClientPtzImpl.h
test/: Test.cpp
